[package]
name = "laminar_test_reliable"
version = "0.1.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", features = ["nightly", "empty"] }
log = "0.4.8"
